--- a/package.json
+++ b/package.json
@@ -8,8 +8,22 @@
     "start": "next start"
   },
   "dependencies": {
+    "algoliasearch": "^4.6.0",
     "next": "10.0.1",
+    "next-images": "^1.6.2",
     "react": "17.0.1",
-    "react-dom": "17.0.1"
+    "react-dom": "^17.0.1",
+    "react-instantsearch-dom": "^6.8.2",
+    "react-marquee-slider": "^1.1.2",
+    "react-reveal": "^1.2.2",
+    "styled-components": "^5"
+  },
+  "devDependencies": {
+    "@types/node": "^14.14.7",
+    "@types/react": "^16.9.56",
+    "@types/react-instantsearch-dom": "^6.3.0",
+    "@types/styled-components": "^5.1.4",
+    "babel-plugin-styled-components": "^1.11.1",
+    "typescript": "^4.0.5"
   }
 }
