--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "react-instantsearch-dom": "^6.8.2",
     "react-marquee-slider": "^1.1.2",
     "react-reveal": "^1.2.2",
-    "styled-components": "^5"
+    "styled-components": "^5",
+    "swr": "^0.3.9"
   },
   "devDependencies": {
     "@types/node": "^14.14.7",
