--- a/package.json
+++ b/package.json
@@ -1,30 +1,40 @@
 {
-  "name": "helllo",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start"
-  },
-  "dependencies": {
-    "algoliasearch": "^4.6.0",
-    "next": "10.0.1",
-    "next-images": "^1.6.2",
-    "react": "17.0.1",
-    "react-dom": "^17.0.1",
-    "react-instantsearch-dom": "^6.8.2",
-    "react-marquee-slider": "^1.1.2",
-    "react-reveal": "^1.2.2",
-    "styled-components": "^5",
-    "swr": "^0.3.9"
-  },
-  "devDependencies": {
-    "@types/node": "^14.14.7",
-    "@types/react": "^16.9.56",
-    "@types/react-instantsearch-dom": "^6.3.0",
-    "@types/styled-components": "^5.1.4",
-    "babel-plugin-styled-components": "^1.11.1",
-    "typescript": "^4.0.5"
-  }
+	"name": "helllo",
+	"version": "0.1.0",
+	"private": true,
+	"scripts": {
+		"dev": "next dev",
+		"build": "next build",
+		"start": "next start",
+		"lint": "eslint '*/**/*.{js,ts,tsx}' --quiet --fix"
+	},
+	"dependencies": {
+		"algoliasearch": "^4.6.0",
+		"next": "10.0.1",
+		"next-images": "^1.6.2",
+		"react": "17.0.1",
+		"react-dom": "^17.0.1",
+		"react-instantsearch-dom": "^6.8.2",
+		"react-marquee-slider": "^1.1.2",
+		"react-reveal": "^1.2.2",
+		"styled-components": "^5",
+		"swr": "^0.3.9"
+	},
+	"devDependencies": {
+		"@types/node": "^14.14.7",
+		"@types/react": "^16.9.56",
+		"@types/react-instantsearch-dom": "^6.3.0",
+		"@types/styled-components": "^5.1.4",
+		"@typescript-eslint/eslint-plugin": "^4.8.2",
+		"@typescript-eslint/parser": "^4.8.2",
+		"babel-plugin-styled-components": "^1.11.1",
+		"eslint": "^7.14.0",
+		"eslint-config-airbnb": "^18.2.1",
+		"eslint-config-prettier": "^6.15.0",
+		"eslint-plugin-prettier": "^3.1.4",
+		"eslint-plugin-react": "^7.21.5",
+		"install-peerdeps": "^2.0.3",
+		"prettier": "2.2.1",
+		"typescript": "^4.1.2"
+	}
 }
