--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
 	"devDependencies": {
 		"@types/node": "^14.14.7",
 		"@types/react": "^16.9.56",
+		"@types/react-burger-menu": "^2.6.2",
 		"@types/react-instantsearch-dom": "^6.3.0",
 		"@types/styled-components": "^5.1.4",
 		"@typescript-eslint/eslint-plugin": "^4.8.2",
@@ -35,6 +36,7 @@
 		"eslint-plugin-react": "^7.21.5",
 		"install-peerdeps": "^2.0.3",
 		"prettier": "2.2.1",
+		"react-burger-menu": "^2.9.2",
 		"typescript": "^4.1.2"
 	}
 }
