--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
 		"lint": "eslint '*/**/*.{js,ts,tsx}' --quiet --fix"
 	},
 	"dependencies": {
+		"@types/yup": "^0.29.10",
 		"algoliasearch": "^4.6.0",
+		"formik": "^2.2.5",
 		"next": "10.0.1",
 		"next-images": "^1.6.2",
 		"react": "17.0.1",
@@ -18,7 +20,8 @@
 		"react-marquee-slider": "^1.1.2",
 		"react-reveal": "^1.2.2",
 		"styled-components": "^5",
-		"swr": "^0.3.9"
+		"swr": "^0.3.9",
+		"yup": "^0.32.1"
 	},
 	"devDependencies": {
 		"@types/node": "^14.14.7",
